--- a/src/frames/about-page/about-page.css
+++ b/src/frames/about-page/about-page.css
@@ -2,39 +2,34 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    scroll-snap-type: start;
 }
 
 .left {
-    width: 50vw;
-    height: 50vh;
     flex-direction: row;
-}
-
-.right {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
     width: 50vw;
-    height: 50vh;
-    flex-direction: row;
 }
 
 .about {
     font-size: 3em;
-    align-self: center;
-    margin-top: 1.5em;
 }
 
 .summary {
-    width: 40vw;
-    height: 75vh;
-    font-size: 1.25em;
     text-align: justify;
-    align-self: center;
-    margin-left: 100px;
+    margin-left: 3em;
+    width: 40vw;
+    font-size: 1.25em;
+}
+
+.right {
+    flex-direction: row;
+    width: 50vw;
 }
 
 .cutepic {
-    height: 95%;
     align-self: center;
-    padding: 2em;
+    max-width: 80%;
     margin-top: 6em;
 }
