--- a/src/frames/timeline-page/timeline-page.css
+++ b/src/frames/timeline-page/timeline-page.css
@@ -3,9 +3,29 @@
     height: 100vh;
     display: flex;
     justify-content: center;
+    background-color: #EDECE1;
+}
+
+.projects-and-experience {
+    flex-direction: column;
+    color: black;
+    position: absolute;
+    right: 2em;
+    margin-top: 0.5em;
+    font-size: 2.5em;
+    height: 12vh;
 }
 
 .timeline {
-    width: 80vw;
-    height: 80vh;
+    width: 100%;
+    height: 80%;
+    align-self: flex-end;
+    flex-direction: column;
+    overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.timeline::-webkit-scrollbar {
+    display: none;
 }
